--- a/StaffOnline/StaffOnline.csproj
+++ b/StaffOnline/StaffOnline.csproj
@@ -35,7 +35,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OTAPI">
-      <HintPath>..\..\Tshock-refs\OTAPI.dll</HintPath>
+      <HintPath>ref\OTAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,11 +47,13 @@
     <Reference Include="System.Xml" />
     <Reference Include="TerrariaServer, Version=1.3.0.6, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Tshock-refs\TerrariaServer.exe</HintPath>
+      <HintPath>ref\TerrariaServer.exe</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="TShockAPI, Version=4.3.11.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Tshock-refs\TShockAPI.dll</HintPath>
+      <HintPath>ref\TShockAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
